--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.11",
     "swagger-autogen": "^2.23.1",
     "swagger-ui-express": "^4.1.4"
   }
