--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "start-gendoc": "node swagger.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.1395.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "node-fetch": "^2.6.11",
